# my-expenses-api

./: .dockerignore  .env.development  .gitignore  Dockerfile  Makefile  docker-compose-dev.yml  docker-compose-prod.yml  gunicorn.conf.py  manage.py  pyproject.toml
api/: urls.py
api/views/: base.py  expenses.py
common/: decorators.py  models.py  runners.py
common/migrations/: 0001_initial.py
common/services/: openai.py
core/: urls.py
core/settings/: __init__.py  auth.py  aws.py  base.py  database.py  enviroment.py  files.py  i18n.py  tests.py
core/settings/apps/: __init__.py  apps.py  cors.py  rest_framework.py
expenses/: models.py
expenses/migrations/: 0001_initial.py  0002_alter_transaction_category.py
expenses/selectors/: transactions.py
expenses/services/: csv_reader.py  transaction.py
expenses/services/tests/: test_credit_card_importer.py  test_csv_reader.py
expenses/services/tests/mocks/: openai_response.json  transactions.csv
tmp/: transacoes.csv
utils/: user.py
